Bug #2755 - On small iphones, gradebook table background color needs adjustment
- fixing table width to solve strange overlapping background color issueon iPhone

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -711,6 +711,9 @@ span.twitter-typeahead {
 		#an-gradebook-container {
 			top: 15px;
 			position: relative;
+			@media (max-width: 991px) {
+				max-width: none;
+			}
 		}
 		position: relative;
 		#students-header,
